style: :lipstick: Adjust styles for HPP Profile on mobile
Adjust styles for HPP Profile on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2858,6 +2858,7 @@
         font-family: "veneer", sans-serif;
         font-size: 1.875rem;
         line-height: 2.0625rem;
+        max-width: 24ch;
 
         @include media('tablet') {
             text-align: center;
@@ -2908,8 +2909,8 @@
 
         &--mobile {
             color: $color-blue;
-
             padding: 3rem 0 0 0;
+            max-width: 22ch;
 
             @media screen and (min-width: 1024px) {
                 display: none;
@@ -2934,7 +2935,8 @@
     &__subhead {
         font-size: 1.3125rem;
         font-weight: 700;
-        margin: 2rem 0;
+        margin: 2.5rem 0 1.375rem;
+        max-width: 22ch;
         font-family: 'Oswald';
 
         @media screen and (min-width: 769px) {
@@ -2993,7 +2995,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
 
         max-width: 46.625rem;
         margin-left: auto;
@@ -3015,15 +3017,15 @@
         justify-content: center;
         align-items: center;
         background-color: $color-pearl-bush;
-        padding: 2.5rem .5rem;
-        padding-top: 4rem;
-        max-width: 19.8125rem;
+        padding: 3.5rem .5rem 2.5rem;
+        // padding-top: 4rem;
+        max-width: 38ch;
         position: relative;
 
         margin-left: auto;
         margin-right: auto;
 
-        margin-bottom: 4rem;
+        margin-bottom: 2.5rem;
         z-index: 1;
 
         &::before {
@@ -3061,7 +3063,7 @@
             font-weight: 400;
             line-height: 24px;
 
-            max-width: 17.6875rem;
+            max-width: 30ch;
 
             @media screen and (min-width: 768px) {
 
@@ -3135,7 +3137,7 @@
         &__section {
             background-image: url("/assets/images/hpp-profile/frame-polaroid-mb.png");
             background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background-size: 100% 99%;
             position: relative;
 
             margin-left: auto;
@@ -3170,7 +3172,7 @@
             @media screen and (min-width: 768px) {
                 background-image: url("/assets/images/hpp-profile/frame-polaroid.png");
 
-                padding: 3.3rem 2.6rem;
+                padding: 3.3rem 2.3rem;
                 margin-bottom: 6rem;
             }
 
@@ -3196,6 +3198,7 @@
                 margin: 1rem;
                 font-size: 1.125rem;
                 line-height: 25.2px;
+                max-width: 33ch;
 
                 // @media screen and (min-width: 768px) {
                 //     max-width: 90%;
@@ -3208,7 +3211,7 @@
                 justify-content: center;
                 flex-direction: column;
                 align-items: center;
-                margin-bottom: 2rem;
+                // margin-bottom: 2rem;
 
                 &--mb {
                     @media screen and (min-width: 769px) {
@@ -3243,18 +3246,28 @@
 
             &__text-chart {
                 text-align: center;
-                max-width: 10rem;
+                max-width: 20ch;
                 margin: auto;
                 font-size: .875rem;
                 font-weight: 400;
                 line-height: 18px;
+                margin-left: 25%;
+
+                @media screen and (min-width: 769px) {
+                    margin-left: auto;
+                    margin-top: .3125rem;
+                    margin-bottom: 0;
+                    max-width: 20ch;
+                    width: 30%;
+                }
             }
 
             &__content {
                 font-size: .875rem;
+                line-height: 1.3125rem;
                 color: $color-white;
                 position: relative;
-                padding: 0 1rem;
+                padding: 0 1rem 0 2rem;
                 margin: 0 auto;
 
                 &::before {
@@ -3305,6 +3318,13 @@
                     &::before {
                         content: 'c';
                     }
+                }
+
+                sup:first-child {
+                    font-size: 0.8em;
+                    left: 1.5rem;
+                    top: 7px;
+                    position: absolute;
                 }
             }
 
@@ -3415,13 +3435,14 @@
                 font-size: 1rem;
                 font-family: 'Special Elite', cursive;
                 font-weight: 400;
+                line-height: 1.5rem;
 
                 @media screen and (max-width: 768px) {
                     background-image: none;
                     color: $color-white;
                     z-index: 2;
                     margin: 0;
-                    max-width: 25rem;
+                    max-width: 32ch;
                     padding: 5rem 0;
                     position: relative;
 
@@ -3523,7 +3544,7 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
-                padding: 8.125rem 1.875rem 4.75rem;
+                padding: 8.9rem 1.875rem 4.75rem;
                 margin: 0 auto;
                 max-width: 23rem;
 
@@ -3545,15 +3566,22 @@
                     font-weight: 400;
                     position: relative;
                     font-family: 'Barlow', sans-serif;
-                    margin-bottom: 1rem;
-
+                    margin-top: 1.5rem;
+                    // margin-bottom: 1rem;
                     line-height: 15.6px;
+                    padding-left: .625rem;
 
-                    &::before {
+                    sup {
+                        top: 5px;
+                        left: 5px;
+                        position: absolute;
+                    }
+
+                    /* &::before {
                         content: '*';
                         position: absolute;
                         left: -5px;
-                    }
+                    } */
                 }
             }
 
@@ -3629,16 +3657,23 @@
 
             &--disclaimer {
                 text-align: center;
-                margin-top: 2rem;
+                margin-top: 1rem;
                 margin-bottom: 3rem;
+                margin-left: auto;
+                margin-right: auto;
                 font-weight: 400;
                 font-size: 12px;
                 line-height: 1rem;
+                max-width: 48ch;
 
                 @media screen and (min-width: 769px) {
                     margin-top: 1rem;
                     font-size: .875rem;
                     padding: 0 4rem;
+                }
+
+                sup {
+                    top: 0;
                 }
             }
 
@@ -3661,6 +3696,7 @@
             background-repeat: no-repeat;
             background-position: center left;
             max-width: 100%;
+            margin-top: 4rem;
 
             @media screen and (max-width: 768px) {
                 background-image: none;
@@ -3689,6 +3725,7 @@
 
                 &:nth-of-type(2) {
                     max-width: 33ch;
+                    margin-bottom: .625rem;
 
                     @media screen and (min-width: 768px) {
                         margin-left: auto;
@@ -3700,6 +3737,11 @@
                         max-width: 100%;
                     }
                 }
+            }
+
+            .hpp__profile__content {
+                max-width: 33ch;
+                margin-left: 0;
             }
         }
     }
@@ -3751,8 +3793,8 @@
 
             &--text {
                 font-weight: 600;
-                margin-bottom: 2rem;
-
+                margin-bottom: 1rem;
+                max-width: 29ch;
                 font-size: 1.125rem;
                 line-height: 25.2px;
 
@@ -3939,9 +3981,10 @@
 
                     @media screen and (max-width: 768px) {
                         display: block;
-                        margin: 1rem 0 2rem 0;
+                        margin: 0 0 1.5rem 0;
                         font-weight: 600;
                         font-size: 1.125rem;
+                        line-height: 1.575rem;
                     }
                 }
 
@@ -3976,7 +4019,7 @@
             flex-direction: row;
             justify-content: flex-start;
             flex-wrap: wrap;
-            margin-bottom: 2rem;
+            // margin-bottom: 2rem;
 
             @media screen and (min-width: 769px) {
                 justify-content: space-between;
@@ -3999,19 +4042,23 @@
             align-items: flex-start;
             align-items: center;
             text-align: center;
-
-            max-width: 14.6875rem;
+            max-width: 30ch;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 1.5625rem;
 
 
 
-            :not(:last-of-type) {
+            /* :not(:last-of-type) {
                 margin-bottom: 3rem;
-            }
+            } */
 
-            &:last-of-type {
-                max-width: 17.6875rem;
+            &--bigger {
+                max-width: 36ch;
+
+                .hpp-multisystemic__study--text {
+                    max-width: 31ch;
+                }
             }
 
             @media screen and (min-width: 769px) {
@@ -4021,6 +4068,12 @@
             @media screen and (min-width: 1024px) {
                 justify-content: flex-start;
                 margin-left: 0;
+            }
+
+            &--text {
+                font-size: 1.125rem;
+                line-height: 1.575rem;
+                max-width: 25ch;
             }
 
             &--text-red-line {
@@ -4094,7 +4147,7 @@
             }
 
             &--line {
-                margin: 2rem 0;
+                margin: 2.4375rem 0 2.5625rem;
                 border-top: 1px solid $color-light-granite-grey;
                 width: 100%;
 
@@ -4109,7 +4162,7 @@
 
             &--red-line-img {
                 margin-top: 1rem;
-                margin-bottom: 1rem;
+                // margin-bottom: 1rem;
 
                 &--mobile {
                     @media screen and (min-width: 769px) {
@@ -4296,10 +4349,25 @@
             #multisystemic2 {
                 .hpp-multisystemic__study {
 
-                    margin-bottom: 2rem;
+                    margin-bottom: 2.5rem;
 
-                    &:first-of-type {
+                    /* &:first-of-type {
                         max-width: 17.6875rem;
+                    } */
+
+                    &--bigger:nth-of-type(3) {
+                        max-width: 32ch;
+                    }
+                }
+
+                .hpp-multisystemic__report {
+                    .hpp-multisystemic__study {
+                        margin-top: 2rem;
+                    }
+
+                    .hpp-multisystemic__report--conditions-smaller {
+                        font-size: .8125rem;
+                        line-height: 1.0562rem;
                     }
                 }
 
@@ -4348,16 +4416,25 @@
 
             #multisystemic3 {
                 .hpp-multisystemic__study {
+                    margin-bottom: 2.3125rem;
 
-                    margin-bottom: 2rem;
+                    &--bigger {
+                        .hpp-multisystemic__study--text {
+                            max-width: 32ch;
+                        }
+                    }
 
-                    &:first-of-type {
+                    /* &:first-of-type {
                         max-width: 18.6875rem;
                     }
 
                     &:last-of-type {
                         max-width: 15.6875rem;
-                    }
+                    } */
+                }
+
+                .hpp-multisystemic__condition {
+                    max-width: 41ch;
                 }
 
                 .hpp-multisystemic__condition.hpp-multisystemic__condition--dagger {
@@ -4422,7 +4499,7 @@
 
                         &:last-of-type {
                             .hpp-multisystemic__curiositie--text {
-                                max-width: 20rem;
+                                max-width: 30ch;
                             }
                         }
                     }
@@ -4469,7 +4546,7 @@
         }
 
         &__condition {
-            margin-bottom: 2rem;
+            // margin-bottom: 2rem;
             // margin-left: 4rem;
             // margin-right: 4rem;
             position: relative;
@@ -4478,6 +4555,7 @@
             font-weight: 400;
             line-height: 21px;
             max-width: 289px;
+            padding-left: .625rem;
 
             @media screen and (min-width: 768px) {
                 margin: 0 auto;
@@ -4488,7 +4566,14 @@
                 line-height: 18.2px;
             }
 
-            &--dagger {
+            .symbol-sup {
+                font-size: 0.8em;
+                top: 5px;
+                left: 5px;
+                position: absolute;
+            }
+
+            /* &--dagger {
                 &::before {
                     content: '†';
                     position: absolute;
@@ -4516,7 +4601,7 @@
                         left: -8px;
                     }
                 }
-            }
+            } */
         }
 
         &__select {
@@ -4560,8 +4645,33 @@
 
         &__report {
 
+            picture {
+                position: relative;
+            }
+
+            figcaption {
+                color: $color-granite-grey;
+                font-size: 12px;
+                font-weight: 600;
+                line-height: .75rem;
+                transform: rotate(-90deg);
+                position: absolute;
+                left: -35px;
+                top: 37%;
+                text-align: center;
+
+                @media screen and (min-width: 769px) {
+                    position: relative;
+                    transform: unset;
+                    left: unset;
+                    top: unset;
+                }
+            }
+
             &--title {
-                padding: 1rem 0 0.5rem 0 !important;
+                // padding: 1rem 0 0.5rem 0 !important;
+                margin: 1rem 0;
+                max-width: 27ch;
 
                 @media screen and (min-width: 1024px) {
                     font-size: 1.5rem;
@@ -4570,7 +4680,12 @@
             }
 
             &--chart {
-                margin: 2rem 0 1.5rem 0;
+                margin: 0;
+                max-width: 500px;
+
+                @media screen and (min-width: 769px) {
+                    max-width: 100%;
+                }
 
                 @media screen and (min-width: 1024px) {
                     margin-bottom: 0.5rem;
@@ -4586,19 +4701,26 @@
                         display: block;
                     }
                 }
-
             }
 
             &--content {
                 position: relative;
                 font-size: .875rem;
                 line-height: 18.2px;
-
                 text-align: left;
-                margin-bottom: 0.5rem;
+
+                &-after-retrospective-chart {
+                    margin-top: .625rem;
+                    margin-bottom: .75rem;
+                }
 
                 @media screen and (min-width: 768px) {
                     margin-bottom: 0;
+                }
+
+                .symbol-sup {
+                    top: -0.3125rem;
+                    font-size: 0.8em;
                 }
 
                 .positioned {
@@ -4610,7 +4732,9 @@
 
                 &--harm {
                     margin-top: 1rem;
-                    padding-bottom: 5rem;
+                    padding-bottom: 4rem;
+                    max-width: 36ch !important;
+                    margin-left: 0!important;
 
                     @media screen and (min-width: 769px) {
                         width: 50rem;
@@ -4652,6 +4776,48 @@
                 &--mt1 {
                     margin-top: 1rem;
                 }
+
+                sup {
+                    font-size: 0.8em;
+                }
+            }
+
+            .hpp-multisystemic__study {
+                &--head-text {
+                    margin-top: 0;
+                    margin-bottom: 2.5rem;
+                    line-height: 1.3125rem;
+                    max-width: 95%;
+                }
+
+                &--text {
+                    font-size: 1rem;
+                    line-height: 1.4rem;
+                }
+
+                &--condition {
+                    margin-top: 2rem;
+                    max-width: 41ch;
+                    position: relative;
+                    padding-left: .625rem;
+
+                    sup {
+                        top: 10px;
+                        left: 5px;
+                        position: absolute;
+                    }
+                }
+            }
+
+            .hpp__profile__subhead--retrospective-chart {
+                margin-top: 1.5625rem;
+                margin-bottom: 2rem;
+            }
+
+            .hpp__profile__title--blue {
+                padding-top: 0;
+                margin-top: 1.5rem;
+                max-width: 24ch;
             }
         }
 
