fix: :bug: Fix missing & extra word on tabs usual suspect mobile

--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -14,6 +14,7 @@ const data_card_1 = {
     "Bowed long bones",
     "Fractures",
     "Gracile ribs",
+    "Narrow torax",
     "Metaphyseal flaring",
     "Brittle teeth",
   ],
