--- a/src/components/usual-suspects/tabs/ChildrenTab.astro
+++ b/src/components/usual-suspects/tabs/ChildrenTab.astro
@@ -53,7 +53,7 @@ const data_card_4 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-10.png",
   subtitle: "Idiopathic hypercalcemia",
-  subtitle_secondary: "AKA IDP",
+  subtitle_secondary: "IDP",
   subtitle_superscript: "9,10",
   info: "",
   list: [
