--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -5,7 +5,7 @@ import ModalMobile from "../modals/ModalMobile.astro";
 const data_card_1 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-4.png",
-  subtitle: "Osteogenesis imperfecta",
+  subtitle: "Osteogenesis<br>imperfecta",
   subtitle_secondary: "Mr. Imperfect",
   subtitle_superscript: "2,6,7",
   info: "",
@@ -39,7 +39,7 @@ const data_card_2 = {
 const data_card_3 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-6.png",
-  subtitle: "X-linked hypophosphatemia ",
+  subtitle: "X-linked<br>hypophosphatemia ",
   subtitle_secondary: "X-Woman",
   subtitle_superscript: "9,10",
   info: "",
@@ -56,7 +56,7 @@ const data_card_3 = {
 const data_card_4 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-7.png",
-  subtitle: "Cleidocranial dysostosis",
+  subtitle: "Cleidocranial<br>dysostosis",
   subtitle_secondary: "Cleo",
   subtitle_superscript: "11",
   info: "",
