--- a/src/components/usual-suspects/tabs/ChildrenTab.astro
+++ b/src/components/usual-suspects/tabs/ChildrenTab.astro
@@ -5,7 +5,7 @@ import ModalMobile from "../modals/ModalMobile.astro";
 const data_card_1 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-4.png",
-  subtitle: "Osteogenesis imperfecta",
+  subtitle: "Osteogenesis<br>imperfecta",
   subtitle_secondary: "Mr. Imperfect",
   subtitle_superscript: "2,6,7",
   info: "",
@@ -52,7 +52,7 @@ const data_card_3 = {
 const data_card_4 = {
   title: "Differential diagnoses for hypophosphatasia with shared symptoms:",
   image: "/assets/images/usual-suspects/Suspect-10.png",
-  subtitle: "Idiopathic hypercalcemia",
+  subtitle: "Idiopathic<br>hypercalcemia",
   subtitle_secondary: "IDP",
   subtitle_superscript: "9,10",
   info: "",
