--- a/src/styles/components/_suspect-card.scss
+++ b/src/styles/components/_suspect-card.scss
@@ -1,6 +1,11 @@
 .suspect-card {
     width: 100%;
     border: 1px solid red;
+    
+    @media screen and (min-width: 1024px) {
+        border-left: none;
+        border-right: none;
+    }
 
     &:not(:first-of-type) {
         border-left: none;
@@ -42,8 +47,10 @@
 
             .suspect-card_bordered-item {
 
-                &:first-of-type {
+                &.suspect-card_bordered-title {
                     border-bottom: 1px solid red;
+                    border-left: 1px solid red;
+                    border-right: 1px solid red;
 
                     @media screen and (min-width: 1024px) {
                         border-bottom: none;
@@ -63,8 +70,21 @@
             }
 
             .cards__grid_container {
-                .suspect-card:first-of-type {
-                    border-bottom: 1px solid red;
+                .suspect-card {
+
+                    &:last-of-type {
+                        border-left: 1px solid red;
+                    }
+
+                    &:not(:first-of-type),
+                    &:not(:last-of-type) {
+                       border-left: 1px solid red;
+                    }
+
+                    &:first-of-type {
+                        border-bottom: 1px solid red;
+                        border-left: none;
+                    }
                 }
             }
         }
@@ -107,6 +127,10 @@
 
 .suspect-card_bordered-title {
     border-bottom: 0;
+}
+
+.title__wrapper {
+    border-bottom: 1px solid red;
 }
 
 .suspect-card__note {
@@ -195,3 +219,102 @@
 
     }
 }
+
+.cards__grid_container {
+    position: relative;
+    display: flex;
+    overflow-x: hidden;
+
+    border-left: 1px solid red;
+    border-right: 1px solid red;
+  }
+  .button-usual-slider {
+    padding: 0;
+    position: absolute;
+    top: 30%;
+    border-radius: 50%;
+    width: 49.41px;
+    height: 49.41px;
+    background: #cf1c0a;
+    border: 3px solid #cf1c0a;
+    color: #ffffff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+  }
+
+  .button-usual-slider:hover {
+    background-color: #cf1c0a;
+  }
+
+  .button-usual-slider--prev {
+    left: -25px;
+  }
+
+  .button-usual-slider--prev::before {
+      content: '';
+      background-image: url('/assets/icons/usual-slider-prev.svg');
+      height: 22px;
+      width: 12px;
+  }
+
+  .button-usual-slider--next::before {
+      content: '';
+      background-image: url('/assets/icons/usual-slider-next.svg');
+      height: 22px;
+      width: 12px;
+  }
+
+  .button-usual-slider--next {
+    right: -25px;
+  }
+
+  .suspect-card.slide-right {
+    transform: translateX(0);
+    animation: slide-right 0.2s ease-in forwards;
+  }
+
+  .suspect-card.slide-left {
+    transform: translateX(-100%);
+    animation: slide-left 0.2s ease-in forwards;
+  }
+
+  .button-usual-slider--is-hidden {
+    display: none;
+  }
+
+  .cards__grid_container .suspect-card {
+    flex: 1 0 25%;
+    position: relative;
+    /* left: -25%; */
+  }
+  /* .cards__grid_container .suspect-card:nth-child(5) {
+    visibility: hidden;
+  } */
+  .usual-suspect__subtabs {
+    @media screen and (min-width: 1024px) {
+      display: none !important;
+    }
+  }
+
+  @keyframes slide-left {
+    0% {
+      transform: translateX(0);
+    }
+
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  @keyframes slide-right {
+    0% {
+      transform: translateX(-100%);
+    }
+
+    100% {
+      transform: translateX(0);
+    }
+  }
